--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+}
+
+body::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
 }
